@@ -22,6 +22,10 @@
 \input{chapters/parameters.tex}
 \input{chapters/solvers.tex}
 
+\newpage
+\bibliographystyle{siam}
+\bibliography{bibliography}
+
 \appendix
 \input{chapters/referenceelements.tex}
 \input{chapters/installation.tex}
