@@ -2,7 +2,7 @@
 % Licensed under the GNU GPL Version 2.
 %
 % First added:  2004-09-03
-% Last changed: 2005-09-03
+% Last changed: 2005-09-30
 %
 % LaTeX document class for FEniCS manuals.
 
@@ -21,6 +21,7 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{makeidx}
+\RequirePackage{url}
 \RequirePackage[latin1]{inputenc}
 
 %--- Misc options ---
@@ -78,7 +79,8 @@
 \newcommand{\dolfin}{\textbf{\textsf{DOLFIN}}}
 \newcommand{\ffc}{\textbf{\textsf{FFC}}}
 \newcommand{\fiat}{\textbf{\textsf{FIAT}}}
-\newcommand{\fixme}[1]{\ \\ \begin{tabular}{||p{\textwidth}||}\hline \rm \textbf{FIXME:} \rm  #1  \\ \hline \end{tabular} \\}
+\newcommand{\fixme}[1]{\ \\ \begin{tabular}{||p{\textwidth}||}\hline\rm\textbf{FIXME:}\rm #1 \\ \hline\end{tabular} \\}
+\newcommand{\devnote}[1]{$\blacktriangleright$ \emph{Developer's note:} #1}
 
 %--- Environments ---
 \DefineVerbatimEnvironment{code}{Verbatim}{commandchars=\\\{\}}
