@@ -27,6 +27,7 @@ MatlabFile::~MatlabFile()
 //-----------------------------------------------------------------------------
 void MatlabFile::operator<<(Matrix& A)
 {
+  // FIXME: update to new format
   dolfin_error("This function needs to be updated to the new format.");
 
   /*
